{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 134,
  "lineage": "aa27fa6b-4011-838d-b42c-70bb95b47fdb",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/backendAddressPools/appgw-backend-pool",
                "ip_addresses": [
                  "10.60.0.4",
                  "10.60.0.5"
                ],
                "name": "appgw-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/frontendIPConfigurations/appgw-frontend-ip",
                "name": "appgw-frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/publicIPAddresses/az104-06-pip-appgw",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/frontendIPConfigurations/appgw-frontend-ip",
                "frontend_ip_configuration_name": "appgw-frontend-ip",
                "frontend_port_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw",
            "identity": [],
            "location": "westeurope",
            "name": "az104-06-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/backendAddressPools/appgw-backend-pool",
                "backend_address_pool_name": "appgw-backend-pool",
                "backend_http_settings_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/applicationGateways/az104-06-appgw/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "az104-06-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": null,
                "disabled_protocols": null,
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_public_ip.appgw_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_gateway_subnet",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/frontendIPConfigurations/lb-frontend",
                "load_balancer_rules": [
                  "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/loadBalancingRules/lb-rule"
                ],
                "name": "lb-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/publicIPAddresses/az104-06-pip-lb"
              }
            ],
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb",
            "location": "westeurope",
            "name": "az104-06-lb",
            "resource_group_name": "az104-06-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-0/ipConfigurations/internal",
              "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-1/ipConfigurations/internal"
            ],
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/backendAddressPools/lb-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/loadBalancingRules/lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb",
            "name": "lb-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/probes/lb-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/loadBalancingRules/lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb",
            "name": "lb-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/backendAddressPools/lb-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/frontendIPConfigurations/lb-frontend",
            "frontend_ip_configuration_name": "lb-frontend",
            "frontend_port": 80,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/loadBalancingRules/lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb",
            "name": "lb-rule",
            "probe_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/probes/lb-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.probe",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-0",
            "internal_domain_name_suffix": "yns1ebsfmzieri1plspvr4lxnd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-0"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-9A-3D-A3",
            "name": "az104-06-nic-0",
            "private_ip_address": "10.60.0.5",
            "private_ip_addresses": [
              "10.60.0.5"
            ],
            "resource_group_name": "az104-06-rg",
            "virtual_machine_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Compute/virtualMachines/az104-06-vm-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-1",
            "internal_domain_name_suffix": "yns1ebsfmzieri1plspvr4lxnd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-0"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-92-C3-FF",
            "name": "az104-06-nic-1",
            "private_ip_address": "10.60.0.4",
            "private_ip_addresses": [
              "10.60.0.4"
            ],
            "resource_group_name": "az104-06-rg",
            "virtual_machine_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Compute/virtualMachines/az104-06-vm-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "pool_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/backendAddressPools/lb-backend-pool",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-0/ipConfigurations/internal|/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/backendAddressPools/lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/backendAddressPools/lb-backend-pool",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-1/ipConfigurations/internal|/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/loadBalancers/az104-06-lb/backendAddressPools/lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.nic",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-0|/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkSecurityGroups/az104-06-nsg",
            "network_interface_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-0",
            "network_security_group_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkSecurityGroups/az104-06-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-1|/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkSecurityGroups/az104-06-nsg",
            "network_interface_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkInterfaces/az104-06-nic-1",
            "network_security_group_id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkSecurityGroups/az104-06-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/networkSecurityGroups/az104-06-nsg",
            "location": "westeurope",
            "name": "az104-06-nsg",
            "resource_group_name": "az104-06-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/publicIPAddresses/az104-06-pip-appgw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.142.159.125",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "az104-06-pip-appgw",
            "resource_group_name": "az104-06-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/publicIPAddresses/az104-06-pip-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.202.157",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "az104-06-pip-lb",
            "resource_group_name": "az104-06-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-appgw",
            "name": "subnet-appgw",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az104-06-rg",
            "virtual_network_name": "az104-06-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-0",
            "name": "subnet-0",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az104-06-rg",
            "virtual_network_name": "az104-06-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "06b265c3-6645-4850-a36f-5c9f58f9776b",
            "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet",
            "location": "westeurope",
            "name": "az104-06-vnet",
            "resource_group_name": "az104-06-rg",
            "subnet": [
              {
                "address_prefix": "10.60.0.0/24",
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-0",
                "name": "subnet-0"
              },
              {
                "address_prefix": "10.60.1.0/24",
                "id": "/subscriptions/76b69a8b-4e03-4cfd-8ee5-fcb614839f69/resourceGroups/az104-06-rg/providers/Microsoft.Network/virtualNetworks/az104-06-vnet/subnets/subnet-appgw",
                "name": "subnet-appgw"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}